--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ img {
    
 <body style="background-color:white;">
       <h1 align="left">HOLY FAMILY</h1><br />
-<img src="roundabout 1.png" alt="J. Mamana">
+<img src="grotesque.jpg" alt="J. Mamana">
 <p style="font-family: 'Helvetica', 'Arial', sans-serif; font-size:100%;">
 </p>
    
