--- a/index.html
+++ b/index.html
@@ -23,4 +23,4 @@ img {
 </html>
 
 
-<small><br /><a href="mailto:info@jmamana.net">email |&nbsp;info [at] theholyfamily [dot] net</a><br>
+<small><a href="mailto:info@jmamana.net">email |&nbsp;info [at] theholyfamily [dot] net</a><br>
