--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>HOLY FAMILY</title>
    	<link rel="icon" href="jcrop.png">
     <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="main2.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
   <style>
 img { 
     width:100%; 
