--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>HOLY FAMILY</title>
+   <title>j. mamana</title>
    	<link rel="icon" href="jcrop.png">
     <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="main.css">
@@ -12,15 +12,17 @@ img {
 </style>
 </head>
    
+<div class="topnav">
+  <a href="https://jmamana.bandcamp.com/">DISCOGRAPHY</a>
+</div>
    
 <body style="background-color:white;">
       <h1 align="left">HOLY FAMILY</h1><br />
-<img src="grotesque.jpg" alt="J. Mamana">
-<p style="font-family: 'Helvetica', 'Arial', sans-serif; font-size:100%;">
-</p>
+<img src="grotesque.png" alt="J. Mamana">
    
 </body>
 </html>
 
 
-<small><a href="mailto:info@jmamana.net">email |&nbsp;info [at] theholyfamily [dot] net</a><br>
+<small><br /><a href="mailto:info@theholyfamily.net">email |&nbsp;info [at] theholyfamily [dot] net</a><br>
+
