--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ img {
 </div>
    
 <body style="background-color:white;">
-      <h1 align="left">HOLY FAMILY</h1><br />
-<img src="grotesque.png" alt="J. Mamana">
+      <h1 align="left">HOLY FAMILY</h1>
+<img src="grotesque.jpg" alt="J. Mamana">
    
 </body>
 </html>
