--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ img {
 </div>
    
 <body style="background-color:white;">
-      <h1 align="left">HOLY FAMILY</h1>
+      <h1 align="left">HOLY FAMILY</h1><br />
 <img src="grotesque.jpg" alt="J. Mamana">
-   
+   <br />
 </body>
 </html>
 
