--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>j. mamana</title>
+   <title>HOLY FAMILY</title>
    	<link rel="icon" href="jcrop.png">
     <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="main.css">
