--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ img {
 </head>
    
 <div class="topnav">
-  <a href="https://jmamana.bandcamp.com/">DISCOGRAPHY</a>
+  <a href="https://holyfamilygroup.bandcamp.com/music">DISCOGRAPHY</a>
+  <a href="https://holyfamilygroup.bandcamp.com/artists">ROSTER</a>
+  <a href="theholyfamily.net/profile">PROFILE</a>
 </div>
    
 <body style="background-color:white;">
