--- a/discography.html
+++ b/discography.html
@@ -21,10 +21,19 @@ img {
 <body style="background-color:white;">
       <h1 align="left">HOLY FAMILY</h1><br />
    <br />
-   <div class="row">
-  <div class="column"></div>
-  <div class="column"></div>
-  <div class="column"></div>
+  <div class="row">
+  <div class="column" style="background-color:#aaa;">
+    <h2>Column 1</h2>
+    <p>Some text..</p>
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2>Column 2</h2>
+    <p>Some text..</p>
+  </div>
+  <div class="column" style="background-color:#ccc;">
+    <h2>Column 3</h2>
+    <p>Some text..</p>
+  </div>
 </div>
 </body>
 </html>
