--- a/discography.html
+++ b/discography.html
@@ -23,8 +23,8 @@ img {
    <br />
   <div class="row">
   <div class="column" style="background-color:#aaa;">
-    <h2>Column 1</h2>
-    <p>Some text..</p>
+    <img src="NOTHING NEW IN THE WEST (ANNOTATED).png" alt="J. Mamana">
+    <p>Nothing New in the West (2018)</p>
   </div>
   <div class="column" style="background-color:#bbb;">
     <h2>Column 2</h2>
