--- a/discography.html
+++ b/discography.html
@@ -22,17 +22,15 @@ img {
       <h1 align="left">HOLY FAMILY</h1><br />
    <br />
   <div class="row">
-  <div class="column" style="background-color:#aaa;">
+  <div class="column" style="background-color:white;">
     <img src="NOTHING NEW IN THE WEST (ANNOTATED).png" alt="J. Mamana">
     <p>Nothing New in the West (2018)</p>
   </div>
-  <div class="column" style="background-color:#bbb;">
-    <h2>Column 2</h2>
-    <p>Some text..</p>
+  <div class="column">
+    
   </div>
-  <div class="column" style="background-color:#ccc;">
-    <h2>Column 3</h2>
-    <p>Some text..</p>
+  <div class="column">
+    
   </div>
 </div>
 </body>
