--- a/discography.html
+++ b/discography.html
@@ -14,8 +14,8 @@ img {
    
 <div class="topnav">
   <a href="/index">BACK</a>
-  <a href="https://holyfamilygroup.bandcamp.com/artists">ROSTER</a>
-  <a href="theholyfamily.net/profile">PROFILE</a>
+  <a href="/roster">ROSTER</a>
+  <a href="/profile">PROFILE</a>
 </div>
    
 <body style="background-color:white;">
