--- a/profile.html
+++ b/profile.html
@@ -22,10 +22,10 @@ img {
       <h1 align="left">HOLY FAMILY</h1><br />
 <img src="grotesque.jpg" alt="J. Mamana">
    <br />
-   <p>Here assembled to bear witness to critique of critical critique. Holy Family.
+   
 </body>
 </html>
 
 
-<small><br /><a href="mailto:info@theholyfamily.net">email |&nbsp;info [at] theholyfamily [dot] net</a><br>
+<small><br /><br /><a href="mailto:info@theholyfamily.net">email |&nbsp;info [at] theholyfamily [dot] net</a><br>
 
