--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@ img {
 </html>
 
 
-<small><br /><a href="mailto:info@theholyfamily.net">email |&nbsp;info [at] theholyfamily [dot] net</a><br>
+<small><br /><a href="mailto:info@theholyfamily.net">&nbsp;info [at] theholyfamily [dot] net</a><br>
 
