--- a/discography.html
+++ b/discography.html
@@ -23,8 +23,7 @@ img {
    <br />
   <div class="row">
   <div class="column" style="background-color:white;">
-    <img src="NOTHING NEW IN THE WEST (ANNOTATED).png" alt="J. Mamana">
-    <p>Nothing New in the West (2018)</p>
+    <img src="NOTHING NEW IN THE WEST (ANNOTATED).png" alt="Nothing New in the West">
   </div>
   <div class="column">
     
