--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@ img {
    
 <body style="background-color:white;">
       <h1 align="left">HOLY FAMILY</h1><br />
-<img src="grotesque.jpg" alt="J. Mamana">
+<img src="hercules.jpg" alt="J. Mamana">
    <br />
    
 </body>
