--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ img {
    
 <body style="background-color:white;">
       <h1 align="left">HOLY FAMILY</h1><br />
-<img src="group.jpg" alt="J. Mamana">
+<img src="grotesque.jpg" alt="J. Mamana">
    <br />
 </body>
 </html>
